--- a/generators/app/templates/common/app/src/main/res/values/strings.xml
+++ b/generators/app/templates/common/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Android App</string>
-    <string name="action_settings">Settings</string>
+    <string name="start">Start</string>
+    <string name="home">Home</string>
+    <string name="action_rxjava_example">RxJava Example</string>
+    <string name="action_logout">Logout</string>
+    <string name="login">login</string>
 </resources>
