added loading capability with progress dialog into base activity and base fragment, simulating operation while logging in/out so loader shows

--- a/generators/app/templates/common/app/src/main/res/values/strings.xml
+++ b/generators/app/templates/common/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="username">test</string>
     <string name="password">test</string>
     <string name="invalid_credentials">Invalid credentials</string>
+    <string name="loading">Loading</string>
+    <string name="done">Done</string>
 </resources>
